wasm_parser/src/snapshots/wasm_parser__tests__as_loop_mid_br_if.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [],
                        return_types: [],
                    },
                    FunctionSignature {
                        param_types: [
                            I32,
                        ],
                        return_types: [
                            I32,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                    1,
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "as-loop-mid",
                        kind: Function {
                            ty: 1,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            OP_BLOCK(
                                Empty,
                                CodeBlock {
                                    id: 1,
                                    instructions: [
                                        OP_LOOP(
                                            Empty,
                                            CodeBlock {
                                                id: 1,
                                                instructions: [
                                                    OP_CALL(
                                                        0,
                                                    ),
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                    OP_BR_IF(
                                                        1,
                                                    ),
                                                    OP_I32_CONST(
                                                        2,
                                                    ),
                                                    OP_RETURN,
                                                ],
                                            },
                                        ),
                                    ],
                                },
                            ),
                            OP_I32_CONST(
                                4,
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
