wasm_parser/src/snapshots/wasm_parser__tests__block_add_i32.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FuncType {
                        param_types: [
                            I32,
                            I32,
                        ],
                        return_types: [
                            I32,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [
                            Ctrl(
                                OP_BLOCK(
                                    ValueType(
                                        I32,
                                    ),
                                    [
                                        Var(
                                            OP_LOCAL_GET(
                                                0,
                                            ),
                                        ),
                                        Var(
                                            OP_LOCAL_GET(
                                                1,
                                            ),
                                        ),
                                        Num(
                                            OP_I32_ADD,
                                        ),
                                    ],
                                ),
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
