wasm_parser/src/snapshots/wasm_parser__tests__function_call.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type {
            entries: [
                FuncType {
                    param_types: [
                        I32,
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
                FuncType {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
        },
        Function {
            types: [
                0,
                1,
            ],
        },
        Export {
            entries: [
                ExportEntry {
                    name: "timesTwo",
                    kind: Function {
                        ty: 1,
                    },
                },
            ],
        },
        Code {
            entries: [
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                1,
                            ),
                        ),
                        Num(
                            OP_I32_ADD,
                        ),
                    ],
                },
                FunctionBody {
                    locals: [],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_CALL(
                                0,
                            ),
                        ),
                    ],
                },
            ],
        },
        Custom {
            name: "name",
        },
    ],
}
