wasm_parser/src/snapshots/wasm_parser__tests__if_loop.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type {
            entries: [
                FuncType {
                    param_types: [
                        I32,
                    ],
                    return_types: [
                        I32,
                    ],
                },
            ],
        },
        Function {
            types: [
                0,
            ],
        },
        Memory {
            entries: [
                MemoryType {
                    limits: Zero(
                        17,
                    ),
                },
            ],
        },
        Export {
            entries: [
                ExportEntry {
                    name: "memory",
                    kind: Memory {
                        ty: 0,
                    },
                },
                ExportEntry {
                    name: "my_loop",
                    kind: Function {
                        ty: 0,
                    },
                },
            ],
        },
        Code {
            entries: [
                FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Num(
                            OP_I32_MUL,
                        ),
                        Num(
                            OP_I32_CONST(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Param(
                            OP_SELECT,
                        ),
                        Var(
                            OP_LOCAL_GET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_IF(
                                Empty,
                                [
                                    Ctrl(
                                        OP_LOOP(
                                            Empty,
                                            [
                                                Var(
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        -1,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_ADD,
                                                ),
                                                Var(
                                                    OP_LOCAL_TEE(
                                                        0,
                                                    ),
                                                ),
                                                Ctrl(
                                                    OP_BR_IF(
                                                        0,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            ],
        },
        Custom {
            name: "producers",
        },
    ],
}
