wasm_parser/src/snapshots/wasm_parser__tests__logic.wasm.snap
---
source: wasm_parser/src/lib.rs
expression: "format!(\"{:#?}\", ast)"
---
Module {
    sections: [
        Type(
            TypeSection {
                entries: [
                    FunctionSignature {
                        param_types: [
                            I32,
                            I32,
                        ],
                        return_types: [
                            I32,
                        ],
                    },
                ],
            },
        ),
        Function(
            FunctionSection {
                types: [
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                    0,
                ],
            },
        ),
        Memory(
            MemorySection {
                entries: [
                    MemoryType {
                        limits: Zero(
                            17,
                        ),
                    },
                ],
            },
        ),
        Export(
            ExportSection {
                entries: [
                    ExportEntry {
                        name: "memory",
                        kind: Memory {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "and",
                        kind: Function {
                            ty: 0,
                        },
                    },
                    ExportEntry {
                        name: "or",
                        kind: Function {
                            ty: 2,
                        },
                    },
                    ExportEntry {
                        name: "xor",
                        kind: Function {
                            ty: 1,
                        },
                    },
                    ExportEntry {
                        name: "l",
                        kind: Function {
                            ty: 5,
                        },
                    },
                    ExportEntry {
                        name: "le",
                        kind: Function {
                            ty: 6,
                        },
                    },
                    ExportEntry {
                        name: "ge",
                        kind: Function {
                            ty: 7,
                        },
                    },
                    ExportEntry {
                        name: "gt",
                        kind: Function {
                            ty: 8,
                        },
                    },
                    ExportEntry {
                        name: "eq",
                        kind: Function {
                            ty: 9,
                        },
                    },
                    ExportEntry {
                        name: "shiftr",
                        kind: Function {
                            ty: 4,
                        },
                    },
                    ExportEntry {
                        name: "shiftl",
                        kind: Function {
                            ty: 3,
                        },
                    },
                ],
            },
        ),
        Code(
            CodeSection {
                entries: [
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_NE,
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_NE,
                            ),
                            Num(
                                OP_I32_AND,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_NE,
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_NE,
                            ),
                            Num(
                                OP_I32_XOR,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_OR,
                            ),
                            Num(
                                OP_I32_CONST(
                                    0,
                                ),
                            ),
                            Num(
                                OP_I32_NE,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    31,
                                ),
                            ),
                            Num(
                                OP_I32_AND,
                            ),
                            Num(
                                OP_I32_SHL,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_CONST(
                                    31,
                                ),
                            ),
                            Num(
                                OP_I32_AND,
                            ),
                            Num(
                                OP_I32_SHR_U,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_LT_U,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_LE_U,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_GE_U,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_GT_U,
                            ),
                        ],
                    },
                    FunctionBody {
                        locals: [],
                        code: [
                            Var(
                                OP_LOCAL_GET(
                                    0,
                                ),
                            ),
                            Var(
                                OP_LOCAL_GET(
                                    1,
                                ),
                            ),
                            Num(
                                OP_I32_EQ,
                            ),
                        ],
                    },
                ],
            },
        ),
        Custom(
            CustomSection {
                name: "producers",
            },
        ),
    ],
}
